--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ div.tocify {
 </div>
 
 
-<p>Associate Statistician / Data Scientist / Problem Solver</p>
+<p>Associate Statistician / Data Scientist / Problem Solver / Active Thinker</p>
 <p>                 </p>
 <div id="education" class="section level2">
 <h2>EDUCATION</h2>
@@ -335,7 +335,7 @@ div.tocify {
 <div id="wuhan-university-applied-chemistry" class="section level3">
 <h3>Wuhan University         <em>Applied Chemistry </em> <br /></h3>
 <p>B.S.       Sep 2010 – Jun 2014</p>
-<p></p>
+<p>                 </p>
 </div>
 </div>
 <div id="experience" class="section level2">
