Add profile pic; add more sections in index

--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@ div.tocify {
         <li>
   <a href="resume.html">Resume</a>
 </li>
+<li>
+  <a href="public.html">Publication</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -322,6 +325,7 @@ div.tocify {
 </div>
 
 
+<p><img src="P4221858.JPG" style="width:75%"></p>
 <p>           </p>
 <p><strong>Associate Statistician / Data Scientist / Problem Solver / Active Thinker</strong></p>
 
