Remove redundant yml info

--- a/contact.html
+++ b/contact.html
@@ -333,13 +333,13 @@ div.tocify {
 
 <p>           </p>
 <div id="phone" class="section level2">
-<h2>Phone:</h2>
+<h2>Phone</h2>
 <ul>
 <li>(+1)   6462043170</li>
 </ul>
 </div>
 <div id="email" class="section level2">
-<h2>Email:</h2>
+<h2>Email</h2>
 <ul>
 <li><p><a href="mailto:yuelinlong@gmail.com">yuelinlong@gmail.com</a>   (major)</p></li>
 <li><p><a href="mailto:yl3181@columbia.edu">yl3181@columbia.edu</a></p></li>
