A prototype of project page (only text included)

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hi, I’m Yuelin Long</title>
+<title>About</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,14 +326,16 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Hi, I’m Yuelin Long</h1>
+<h1 class="title toc-ignore">About</h1>
 
 </div>
 
 
-<p><img src="P4221858.JPG" style="width:70%"></p>
-<p>           </p>
-<p><strong>Associate Statistician / Data Scientist / Problem Solver / Active Thinker</strong></p>
+<div id="about-this-site" class="section level3">
+<h3>About this site</h3>
+<p>This site is built under R version 3.5.1 and Rstudio 1.1.442.</p>
+<p>For the complete code, please refer to <a href="https://github.com/ChristineLong/ChristineLong.github.io.git">my personal website code</a></p>
+</div>
 
 
 
