--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hi, I’m Yuelin Long</title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,14 +326,41 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Hi, I’m Yuelin Long</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p><img src="P4221858.JPG" style="width:70%"></p>
+<div id="clinical-biochemical-and-genetic-features-of-patients-with-mitochondrial-diseases" class="section level3">
+<h3>Clinical, biochemical and genetic features of patients with mitochondrial diseases</h3>
+<p>Columbia University Medical Center       Apr – Aug 2018</p>
+<ul>
+<li>Merged datasets with more than 50 features for 1,000 patients with SAS procedures including macro</li>
+<li>Built logistic regression to classify complex disorders and help diseases diagnoses with e1071 in R</li>
+<li>Utilized goodness of fit test to indicate that the model fits the data</li>
+</ul>
 <p>           </p>
-<p><strong>Associate Statistician / Data Scientist / Problem Solver / Active Thinker</strong></p>
+</div>
+<div id="retrospective-natural-history-of-thymidine-kinase-2-deficiency" class="section level3">
+<h3>Retrospective Natural History of Thymidine Kinase 2 Deficiency</h3>
+<p>Columbia University Medical Center       Nov – Feb 2018</p>
+<ul>
+<li>Incorporated patients’ information from 31 medical centers, and explored and preprocessed data using data cleaning, transformation, segmentations with SAS proc import, merge, proc freq, proc means, etc</li>
+<li>Constructed statistical models to investigate disease progress pattern of certain population</li>
+<li>Used chi square test on baseline characteristics to avoid selection bias in R</li>
+<li>Performed signed-rank test to determine the best treatments for different age groups of people</li>
+</ul>
+<p>           </p>
+</div>
+<div id="prediction-on-parkinsons-disease-pathway" class="section level3">
+<h3>Prediction on Parkinson’s Disease Pathway</h3>
+<p>Mount Sinai Health System      May-Sep 2016</p>
+<ul>
+<li>Extracted different groups of patients’ information from relational database with MySQL, and interpolated missing values using KNN</li>
+<li>Constructed regression models to select key factors leading to the disease using caret package in R</li>
+<li>Presented results with data visualization in Tableau</li>
+</ul>
+</div>
 
 
 
