Initial exploration plot

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Publications</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,9 +25,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
-<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
-<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -315,20 +312,14 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Publications</h1>
 
 </div>
 
 
-<p>           </p>
-<p><strong><a href="https://jmg.bmj.com/content/55/8/515.long">Retrospective Natural History of Thymidine Kinase 2 Deficiency</a>       Journal of Medical Genetics </strong> <br /> Garone C, et al, Long Y, Rahman S, Donati MA, DiMauro S, Hirano M.</p>
-<p><strong>Clinical, biochemical and genetic features of patients with mitochondrial diseases: Data from the North American Mitochondrial Disease Consortium (NAMDC) registry</strong>     Submitted to JAMA Neurology on August 23rd. Barca E, Cooley V, Schoenaker R, Emmanuele V, DiMauro S, Long Y, et al.</p>
-<p><strong><a href="https://pubs.acs.org/doi/abs/10.1021/ja4107012">Systematic investigations of different cytosine modifications on CpG dinucleotide sequences: the effects on the B-Z transition</a>      Journal of the American Chemical Society </strong> <br /> Wang S, Long Y, Wang J, Ge Y, Guo P, Liu Y, Tian T, Zhou X</p>
-<p><strong><a href="https://pubs.acs.org/doi/10.1021/ac402535a">Novel amplex red oxidases based on noncanonical DNA structures: property studies and applications in microRNA detection</a>     Analytical Chemistry </strong> <br /> Wang S, Fu B, Wang J, Long Y, Zhang X, Peng S, Guo P, Tian T, Zhou X.</p>
-<p><strong><a href="https://pubs.rsc.org/en/Content/ArticleLanding/2013/CC/c3cc45423a#!divAbstract">Systematic investigation of DNAs with modified cytosines under hot alkali treatment</a>      Chemical Communications</strong> <br /> Tian T, Zhang X, Fu B, Long Y, Peng S, Wang S, Zhou X, Zhou X.</p>
-<p><strong><a href="https://pubs.rsc.org/en/Content/ArticleLanding/2013/CC/c3cc44017f#!divAbstract">5-Methyldeoxycytidine enhances the substrate activity of DNA polymerase</a>      Chemical Communications</strong> <br /> Tian T, Peng S, Xiao H, Long Y, Fu B, Zhang X, Guo S, Wang S, Zhou X, Liu S, Zhou X.</p>
-<p><strong><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/chem.201203344">Sensitive and convenient detection of microRNAs based on cascade amplification by catalytic DNAzymes</a>      Chemistry</strong> <br /> Tian T, Xiao H, Zhang Z, Long Y, Peng S, Wang S, Zhou X, Liu S, Zhou X.</p>
-<p><strong><a href="https://pubs.rsc.org/en/Content/ArticleLanding/2012/CC/c2cc35648a#!divAbstract">Sensitive analysis of DNA methyltransferase based on a hairpin-shaped DNAzyme</a>     Chemical Communications</strong> <br /> Tian T, Xiao H, Long Y, Zhang X, Wang S, Zhou X, Liu S, Zhou X.</p>
+<div id="christinelong.github.io" class="section level1">
+<h1>ChristineLong.github.io</h1>
+<p>Personal Website</p>
+</div>
 
 
 
