--- a/project.html
+++ b/project.html
@@ -282,18 +282,7 @@ div.tocify {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="resume.html">Resume</a>
-</li>
-<li>
-  <a href="public.html">Publications</a>
-</li>
-<li>
-  <a href="project.html">Projects</a>
-</li>
-<li>
-  <a href="contact.html">Contact</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -331,6 +320,21 @@ div.tocify {
 </div>
 
 
+<p>           </p>
+<div id="sample-project-online-grocery-shopping-report" class="section level3">
+<h3>Sample Project: Online Grocery Shopping Report</h3>
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## -- Attaching packages ---------- tidyverse 1.2.1 --</code></pre>
+<pre><code>## v ggplot2 3.0.0     v purrr   0.2.5
+## v tibble  1.4.2     v dplyr   0.7.6
+## v tidyr   0.8.1     v stringr 1.3.1
+## v readr   1.1.1     v forcats 0.3.0</code></pre>
+<pre><code>## -- Conflicts ------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>library(p8105.datasets)</code></pre>
+<p>     </p>
+</div>
 <div id="clinical-biochemical-and-genetic-features-of-patients-with-mitochondrial-diseases" class="section level3">
 <h3>Clinical, biochemical and genetic features of patients with mitochondrial diseases</h3>
 <p>Columbia University Medical Center       Apr – Aug 2018</p>
