Update project with gun control project

--- a/project.html
+++ b/project.html
@@ -334,13 +334,12 @@ div.tocify {
 <p>         </p>
 <div id="sample-projects" class="section level3">
 <h3>Sample Projects</h3>
-<p><a href="datavis.html">Interactive Data Visualization Using Online Shopping Data</a>  </p>
-<p><a href="https://eshea6.github.io/us_gun_violence.github.io/index.html">Gun Violence in the United States</a></p>
+<p><a href="datavis.html">Interactive Data Visualization Using Online Shopping Data</a></p>
 <p>             </p>
 </div>
 <div id="clinical-biochemical-and-genetic-features-of-patients-with-mitochondrial-diseases" class="section level3">
 <h3>Clinical, biochemical and genetic features of patients with mitochondrial diseases</h3>
-<p>Columbia University Medical Center       Apr â Aug 2018</p>
+<p>Columbia University Medical Center       Apr – Aug 2018</p>
 <ul>
 <li>Merged datasets with more than 50 features for 1,000 patients with SAS procedures including macro</li>
 <li>Built logistic regression to classify complex disorders and help diseases diagnoses with e1071 in R</li>
@@ -350,20 +349,20 @@ div.tocify {
 </div>
 <div id="retrospective-natural-history-of-thymidine-kinase-2-deficiency" class="section level3">
 <h3>Retrospective Natural History of Thymidine Kinase 2 Deficiency</h3>
-<p>Columbia University Medical Center       Nov â Feb 2018</p>
+<p>Columbia University Medical Center       Nov – Feb 2018</p>
 <ul>
-<li>Incorporated patientsâ information from 31 medical centers, and explored and preprocessed data using data cleaning, transformation, segmentations with SAS proc import, merge, proc freq, proc means, etc</li>
+<li>Incorporated patients’ information from 31 medical centers, and explored and preprocessed data using data cleaning, transformation, segmentations with SAS proc import, merge, proc freq, proc means, etc</li>
 <li>Constructed statistical models to investigate disease progress pattern of certain population</li>
 <li>Used chi square test on baseline characteristics to avoid selection bias in R</li>
 <li>Performed signed-rank test to determine the best treatments for different age groups of people</li>
 </ul>
 <p>           </p>
 </div>
-<div id="prediction-on-parkinsonas-disease-pathway" class="section level3">
-<h3>Prediction on Parkinsonâs Disease Pathway</h3>
+<div id="prediction-on-parkinsons-disease-pathway" class="section level3">
+<h3>Prediction on Parkinson’s Disease Pathway</h3>
 <p>Mount Sinai Health System      May-Sep 2016</p>
 <ul>
-<li>Extracted different groups of patientsâ information from relational database with MySQL, and interpolated missing values using KNN</li>
+<li>Extracted different groups of patients’ information from relational database with MySQL, and interpolated missing values using KNN</li>
 <li>Constructed regression models to select key factors leading to the disease using caret package in R</li>
 <li>Presented results with data visualization in Tableau</li>
 </ul>
