--- a/project.html
+++ b/project.html
@@ -334,7 +334,10 @@ div.tocify {
 <p>         </p>
 <div id="sample-projects" class="section level3">
 <h3>Sample Projects</h3>
-<p><a href="datavis.html">Interactive Data Visualization Using Online Shopping Data</a></p>
+<ul>
+<li><p><a href="datavis.html">Interactive Data Visualization Using Online Shopping Data</a></p></li>
+<li><p><a href="https://eshea6.github.io/us_gun_violence.github.io/index.html">Gun Violence in the United States</a> with regression and data visualization</p></li>
+</ul>
 <p>             </p>
 </div>
 <div id="clinical-biochemical-and-genetic-features-of-patients-with-mitochondrial-diseases" class="section level3">
