--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hi, I’m Yuelin Long</title>
+<title>Hi, I’m Christine Long</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
