--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Hi, I’m Yuelin Long</h1>
+<h1 class="title toc-ignore">Hi, I’m Christine Long</h1>
 
 </div>
 
