--- a/project.html
+++ b/project.html
@@ -366,7 +366,7 @@ div.tocify {
 <p>Mount Sinai Health System      May-Sep 2016</p>
 <ul>
 <li>Extracted different groups of patients’ information from relational database with MySQL, and interpolated missing values using KNN</li>
-<li>Constructed regression models to select key factors leading to the disease using caret package in R</li>
+<li>Constructed supervised learning models to select key factors leading to the disease using caret package in R</li>
 <li>Presented results with data visualization in Tableau</li>
 </ul>
 </div>
