--- a/public.html
+++ b/public.html
@@ -331,9 +331,10 @@ div.tocify {
 </div>
 
 
+<p>Published with name as Long Y</p>
 <p>           </p>
 <p><strong><a href="https://jmg.bmj.com/content/55/8/515.long">Retrospective Natural History of Thymidine Kinase 2 Deficiency</a>       Journal of Medical Genetics </strong> <br /> Garone C, et al, Long Y, Rahman S, Donati MA, DiMauro S, Hirano M.</p>
-<p><strong>Clinical, biochemical and genetic features of patients with mitochondrial diseases: Data from the North American Mitochondrial Disease Consortium (NAMDC) registry</strong>     Submitted to JAMA Neurology on August 23rd. Barca E, Cooley V, Schoenaker R, Emmanuele V, DiMauro S, Long Y, et al.</p>
+<p><strong>Clinical, biochemical and genetic features of patients with mitochondrial diseases: Data from the North American Mitochondrial Disease Consortium (NAMDC) registry</strong>     Submitted to JAMA Neurology on August 23rd. Barca E, Long Y, Schoenaker R, Emmanuele V, DiMauro S, Cooley V, et al.</p>
 <p><strong><a href="https://pubs.acs.org/doi/abs/10.1021/ja4107012">Systematic investigations of different cytosine modifications on CpG dinucleotide sequences: the effects on the B-Z transition</a>      Journal of the American Chemical Society </strong> <br /> Wang S, Long Y, Wang J, Ge Y, Guo P, Liu Y, Tian T, Zhou X</p>
 <p><strong><a href="https://pubs.acs.org/doi/10.1021/ac402535a">Novel amplex red oxidases based on noncanonical DNA structures: property studies and applications in microRNA detection</a>     Analytical Chemistry </strong> <br /> Wang S, Fu B, Wang J, Long Y, Zhang X, Peng S, Guo P, Tian T, Zhou X.</p>
 <p><strong><a href="https://pubs.rsc.org/en/Content/ArticleLanding/2013/CC/c3cc45423a#!divAbstract">Systematic investigation of DNAs with modified cytosines under hot alkali treatment</a>      Chemical Communications</strong> <br /> Tian T, Zhang X, Fu B, Long Y, Peng S, Wang S, Zhou X, Zhou X.</p>
