--- a/resume.html
+++ b/resume.html
@@ -353,19 +353,21 @@ div.tocify {
 <h3>Associate Statistician</h3>
 <p>Columbia University Medical Center</p>
 <ul>
-<li>Build regression models using demographic, diagnostic and genetic information to predict potential patients or patients’ future conditions with glmnet package in R <br /></li>
+<li>Applied regression models using demographic, diagnostic and genetic information to identify potential patients or patients’ future conditions with R glmnet and dplyr <br /></li>
+<li>Select best predictive models in classification or regression analysis using AIC or adjusted R2 <br /></li>
+<li>Develop different statistical tests, including two sample t-test, chi-square test and Fisher Exact test, to choose a better treatment, and adjust p values for multiple comparisons <br /><br />
+</li>
 <li>Calculate sample size through power calculation and adjust p values for multiple comparisons <br /></li>
-<li>Select best predictive models in classification or regression analysis, and develop two sample t-test to choose a better strategy for patient treatments <br /></li>
-<li>Prepare statistical reports on descriptive analysis and presented with data visualizations (ggplot2 in R)</li>
+<li>Prepare statistical reports on descriptive analysis and presented with data visualizations (ggplot2 in R) <br /></li>
 </ul>
 </div>
 <div id="associate-researcher-ii" class="section level3">
 <h3>Associate Researcher II</h3>
 <p>Mount Sinai Health System</p>
 <ul>
-<li>Supported target identification, prioritization and validation to neurodegenerative diseases research unit <br /></li>
-<li>Applied data transformation and developed machine learning models with 200,000+ records, including random forest, logistic regression and SVM to understand disease mechanisms <br /></li>
-<li>Built predictive models to understand the role of different types of influences in diseases using Python pandas and scikit-learn <br /></li>
+<li>Supported data mining and exploration to understand disease mechanisms with 200,000+ records <br /></li>
+<li>Proceed literature review and data mining to generate important feature lists, and used feature selection to reduce model complexity and training time <br /></li>
+<li>Built predictive models understand the role of different leading factors in neurological diseases using Python numpy, pandas and scikit-learn <br /></li>
 </ul>
 <p>                 </p>
 </div>
