--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hi, I’m Christine Long</title>
+<title>Hi, I’m Christine (Yuelin) Long</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,7 +326,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Hi, I’m Christine Long</h1>
+<h1 class="title toc-ignore">Hi, I’m Christine (Yuelin) Long</h1>
 
 </div>
 
